[gd_scene load_steps=4 format=3 uid="uid://t0tvu2qwnwh"]

[ext_resource type="Texture2D" uid="uid://dapnnrpi5babw" path="res://Assets/TestSprites/Card_Slot.png" id="1_2yd5i"]
[ext_resource type="Script" uid="uid://gjwnkibtjsd1" path="res://Scripts/card_slot.gd" id="1_dd0t8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jji45"]
size = Vector2(110, 164)

[node name="CardSlot" type="Node2D"]
script = ExtResource("1_dd0t8")

[node name="CardSlotSprite" type="Sprite2D" parent="."]
scale = Vector2(3.4, 3.4)
texture = ExtResource("1_2yd5i")

[node name="CardSlotArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardSlotArea"]
shape = SubResource("RectangleShape2D_jji45")

[connection signal="area_entered" from="CardSlotArea" to="." method="_on_card_slot_area_entered"]
[connection signal="area_exited" from="CardSlotArea" to="." method="_on_card_slot_area_exited"]
